--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -47,7 +47,7 @@
       </div>
       <div class="form-group has-feedback">
         <input type="password" class="form-control" placeholder="Password">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+        <span class="glyphicon glyphicon-print form-control-feedback"></span>
       </div>
       <div class="form-group">
         <div class="row">
@@ -79,7 +79,7 @@
 <!-- jQuery 3 -->
 <script src="bower_components/jquery/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/bootstrap/js/bootstrap.min.js"></script>
 <!-- iCheck -->
 <script src="plugins/iCheck/icheck.min.js"></script>
 <script>
