--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -20,8 +20,9 @@
   <link rel="stylesheet" href="bower_components/AdminLTE/AdminLTE.min.css">
   <!-- iCheck -->
   <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
-  <!--login css-->
+  <!--myspace css-->
   <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/common.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,11 +43,11 @@
 
     <form id="login-form">
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email">
+        <input type="email" name="email" class="form-control" data-toggle="popover" data-trigger="focus" placeholder="Email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" name="password" class="form-control" placeholder="Password">
         <span class="glyphicon glyphicon-print form-control-feedback"></span>
       </div>
       <div class="form-group">
@@ -82,14 +83,12 @@
 <script src="bower_components/bootstrap/js/bootstrap.min.js"></script>
 <!-- iCheck -->
 <script src="plugins/iCheck/icheck.min.js"></script>
-<script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass: 'iradio_square-blue',
-      increaseArea: '20%' /* optional */
-    });
-  });
-</script>
+<!--bootbox-->
+<script src="bower_components/bootbox4.4.0/bootbox.min.js"></script>
+
+<!--myspace-->
+<script src="js/login.js"></script>
+<script src="js/common.js"></script>
+<script src="js/cookie.js"></script>
 </body>
 </html>
