--- a/space-console/src/main/resources/static/workbench.html
+++ b/space-console/src/main/resources/static/workbench.html
@@ -254,9 +254,9 @@
             </ul>
           </li>
           <!-- User Account: style can be found in dropdown.less -->
-          <li class="dropdown user user-menu">
+          <li class="dropdown user user-menu" id="user-account-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="img/user2-160x160.jpg" class="user-image" alt="用户头像">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
