完成登录逻辑

--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -59,7 +59,7 @@
           <div class="form-group">
             <div class="col-md-12">
               <div class="checkbox checkbox-primary pull-left p-t-0">
-                <input id="checkbox-sign-in" name="chkSignIn" type="checkbox">
+                <input id="checkbox-sign-in" name="isRemember" type="checkbox">
                 <label for="checkbox-sign-in"> Remember me </label>
               </div>
               <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i
