--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -133,7 +133,7 @@
 <!--Menu sidebar -->
 <script src="assets/js/sidebarmenu.js"></script>
 <!--stickey kit -->
-<!--<script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>-->
+<script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
 <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
 <!--Custom JavaScript -->
 <script src="assets/js/custom.min.js"></script>
