--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -91,7 +91,7 @@
             </div>
           </div>
         </form>
-        <form class="form-horizontal" id="recoverform" action="index.html">
+        <form class="form-horizontal" id="recoverform">
           <div class="form-group ">
             <div class="col-xs-12">
               <h3>Recover Password</h3>
