--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -67,7 +67,7 @@
           </div>
           <div class="form-group text-center m-t-20">
             <div class="col-xs-12">
-              <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
+              <button type="button" class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
                        id="userLoginBtn">Log In
               </button>
             </div>
