添加登出的js和相关接口

--- a/space-console/src/main/resources/static/workbench.html
+++ b/space-console/src/main/resources/static/workbench.html
@@ -53,7 +53,7 @@
       <!-- Logo -->
       <!-- ============================================================== -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="workbench.html">
           <!-- Logo icon --><b>
           <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
           <!-- Dark Logo icon -->
@@ -349,7 +349,7 @@
           <li class="nav-small-cap">PERSONAL</li>
           <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard </span></a>
             <ul aria-expanded="false" class="collapse">
-              <li><a href="index.html">Dashboard 1</a></li>
+              <li><a href="workbench.html">Dashboard 1</a></li>
               <li><a href="index2.html">Dashboard 2</a></li>
               <li><a href="index3.html">Dashboard 3</a></li>
               <li><a href="index4.html">Dashboard 4</a></li>
@@ -562,7 +562,7 @@
     <div class="sidebar-footer">
       <!-- item--><a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>
       <!-- item--><a href="" class="link" data-toggle="tooltip" title="Email"><i class="mdi mdi-gmail"></i></a>
-      <!-- item--><a href="" class="link" data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a> </div>
+      <!-- item--><a href="javascript:void(0);" class="link" id="user-logout-btn"  data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a> </div>
     <!-- End Bottom points-->
   </aside>
   <!-- ============================================================== -->
@@ -1126,6 +1126,7 @@
 
 <!--Custom JavaScript -->
 <script src="assets/js/custom.min.js"></script>
+<script src="js/workbench.js"></script>
 <!-- ============================================================== -->
 <!-- This page plugins -->
 <!-- ============================================================== -->
