--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -66,8 +66,9 @@
           </div>
           <div class="form-group text-center m-t-20">
             <div class="col-xs-12">
-              <button type="button" class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
-                       id="userLoginBtn">Log In
+              <button type="button"
+                      class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
+                      id="user-login-btn">Login
               </button>
             </div>
           </div>
@@ -136,12 +137,13 @@
 <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
 <!--Custom JavaScript -->
 <script src="assets/js/custom.min.js"></script>
+<script src="js/login.js"></script>
+<script src="js/common.js"></script>
 <!-- ============================================================== -->
 <!-- Style switcher -->
 <!-- ============================================================== -->
 <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
-<script src="js/login.js"></script>
-<script src="js/common.js"></script>
+
 </body>
 
 </html>
