--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -47,13 +47,13 @@
           <h3 class="box-title m-b-20">Sign In</h3>
           <div class="form-group ">
             <div class="col-xs-12">
-              <input class="form-control" type="email" required="required" name="loginEmail"
-                     placeholder="Email"></div>
+              <input class="form-control" type="email" name="loginEmail" placeholder="Email"
+                     data-toggle="popover" title="Warning"></div>
           </div>
           <div class="form-group">
             <div class="col-xs-12">
-              <input class="form-control" type="password" required="required" name="loginPwd"
-                     placeholder="Password"></div>
+              <input class="form-control" type="password" name="loginPwd" placeholder="Password"
+                     data-toggle="popover" title="Warning"></div>
           </div>
           <div class="form-group">
             <div class="col-md-12">
