--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -48,12 +48,12 @@
           <div class="form-group ">
             <div class="col-xs-12">
               <input class="form-control" type="email" name="loginEmail" placeholder="Email"
-                     data-toggle="popover"></div>
+                     data-toggle="popover" data-trigger="focus"></div>
           </div>
           <div class="form-group">
             <div class="col-xs-12">
               <input class="form-control" type="password" name="loginPwd" placeholder="Password"
-                     data-toggle="popover"></div>
+                     data-toggle="popover" data-trigger="focus"></div>
           </div>
           <div class="form-group">
             <div class="col-md-12">
