--- a/space-console/src/main/resources/static/workbench.html
+++ b/space-console/src/main/resources/static/workbench.html
@@ -1125,7 +1125,7 @@
 <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
 
 <!--Custom JavaScript -->
-<script src="assets/js/custom.min.js"></script>
+<script src="assets/js/custom.js"></script>
 <script src="js/workbench.js"></script>
 <!-- ============================================================== -->
 <!-- This page plugins -->
