注册的前端逻辑

--- a/space-console/src/main/resources/static/login.html
+++ b/space-console/src/main/resources/static/login.html
@@ -62,13 +62,13 @@
                 <label for="checkbox-sign-in"> Remember me </label>
               </div>
               <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i
-                  class="fa fa-lock m-r-5"></i> Forgot pwd?</a></div>
+                  class="fa fa-lock m-r-5"></i> Forgot Password?</a></div>
           </div>
           <div class="form-group text-center m-t-20">
             <div class="col-xs-12">
               <button type="button"
                       class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
-                      id="user-login-btn">Login
+                      id="user-login-btn">Log In
               </button>
             </div>
           </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="form-group m-b-0">
             <div class="col-sm-12 text-center">
-              <p>Don't have an account? <a href="register.html" class="text-info m-l-5"><b>Sign
+              <p>Don't have an account? <a href="pages/register.html" class="text-info m-l-5"><b>Sign
                 Up</b></a></p>
             </div>
           </div>
